Archive/fb3f718b6d449afa63556976e9111dd4-93e6c6235a92d0c233f44beab03470ad/output
main.cpp:87:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout << "All is fine\n";
    ^~~~
    std::cout
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
1 error generated.
